Asset loading and AS fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,15 @@ add_subdirectory(thirdparty/vma)
 add_subdirectory(thirdparty/glm)
 add_subdirectory(thirdparty/tinygltf)
 
+# set(ASSET_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/assets)
+file(TO_CMAKE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/assets ASSET_FOLDER)
+
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/PathConfig.inl.in
+    ${CMAKE_CURRENT_BINARY_DIR}/generated/PathConfig.inl
+    @ONLY
+)
+
 add_executable(${PROJECT_NAME}
     src/Main.cpp
     src/Types.hpp
@@ -56,6 +65,7 @@ target_include_directories(${PROJECT_NAME}
 PRIVATE
     src
     thirdparty/stb
+    ${CMAKE_CURRENT_BINARY_DIR}/generated
 )
 
 target_link_libraries(${PROJECT_NAME}
