--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,8 @@ add_executable(${PROJECT_NAME}
     src/Main.cpp
     src/Types.hpp
 
+    src/Core/Application.hpp
+    src/Core/Application.cpp
     src/Core/Logger.hpp
     src/Core/Logger.cpp
 
