--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,11 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+find_package(Vulkan REQUIRED COMPONENTS glslc)
+find_program(GLSLC_EXE NAMES glslc HINTS Vulkan::glslc)
+set(SHADER_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/shaders)
+set(SHADER_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR}/shaders)
+
 if(WIN32)
     set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_WIN32_KHR)
 endif()
@@ -25,8 +30,8 @@ add_subdirectory(thirdparty/glm)
 add_subdirectory(thirdparty/tinygltf)
 add_subdirectory(thirdparty/glfw)
 
-# set(ASSET_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/assets)
 file(TO_CMAKE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/assets ASSET_FOLDER)
+file(TO_CMAKE_PATH ${SHADER_BIN_DIR} SHADER_FOLDER)
 
 configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/PathConfig.inl.in
@@ -67,6 +72,8 @@ add_executable(${PROJECT_NAME}
     src/RHI/Shader.cpp
     src/RHI/DescriptorManager.hpp
     src/RHI/DescriptorManager.cpp
+    src/RHI/Pipeline.hpp
+    src/RHI/Pipeline.cpp
 
     src/Scene/SceneData.hpp
     src/Scene/SceneLoader.hpp
@@ -123,3 +130,64 @@ if(NOT MSVC)
         "-Wno-nullability-completeness"
     )
 endif()
+
+function(compile_shaders_target target_name)
+    file(GLOB_RECURSE SHADER_SOURCES
+        ${SHADER_SRC_DIR}/*.vert
+        ${SHADER_SRC_DIR}/*.frag
+        ${SHADER_SRC_DIR}/*.comp
+        ${SHADER_SRC_DIR}/*.geom
+        ${SHADER_SRC_DIR}/*.tesc
+        ${SHADER_SRC_DIR}/*.tese
+        ${SHADER_SRC_DIR}/*.mesh
+        ${SHADER_SRC_DIR}/*.task
+        ${SHADER_SRC_DIR}/*.rgen
+        ${SHADER_SRC_DIR}/*.rchit
+        ${SHADER_SRC_DIR}/*.rmiss
+    )
+
+    if(NOT SHADER_SOURCES)
+        message(WARNING "No shader sources found in ${SHADER_SRC_DIR}")
+        return()
+    endif()
+
+    add_custom_command(
+        OUTPUT ${SHADER_BIN_DIR}
+        COMMAND ${CMAKE_COMMAND} -E make_directory ${SHADER_BIN_DIR}
+        COMMENT "Creating shader output directory: ${SHADER_BIN_DIR}"
+    )
+
+    set(SPV_SHADERS "")
+
+    foreach(shader_source ${SHADER_SOURCES})
+        get_filename_component(shader_name ${shader_source} NAME)
+        set(spv_output ${SHADER_BIN_DIR}/${shader_name}.spv)
+
+        add_custom_command(
+            OUTPUT ${spv_output}
+            COMMAND ${GLSLC_EXE}
+                --target-spv=spv1.4
+                -o ${spv_output}
+                ${shader_source}
+            DEPENDS ${shader_source} ${SHADER_BIN_DIR}
+            COMMENT "Compiling shader: ${shader_name}"
+            VERBATIM
+        )
+
+        list(APPEND SPV_SHADERS ${spv_output})
+    endforeach()
+
+    add_custom_target(${target_name}
+        DEPENDS ${SPV_SHADERS}
+        COMMENT "Building all shaders"
+    )
+
+    add_dependencies(${PROJECT_NAME} ${target_name})
+    
+    target_include_directories(${PROJECT_NAME}
+    PRIVATE
+        ${SHADER_BIN_DIR}
+    )
+endfunction()
+
+compile_shaders_target(compile_shaders)
